--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
     <dependency>
       <groupId>com.databend</groupId>
       <artifactId>databend-jdbc</artifactId>
-      <version>0.0.5-rc4</version>
+      <version>0.0.7</version>
     </dependency>
   </dependencies>
 </project>
