--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -79,7 +79,7 @@ jobs:
       - name: Run tests
         run: |
           mkdir -p /home/runner/.config/clojure
-          cat modules/drivers/databend/.github/deps.edn | sed -e "s|PWD|$PWD|g" > /home/runner/.config/clojure/deps.edn
+          cat modules/drivers/databend/.github/workflows/deps.edn | sed -e "s|PWD|$PWD|g" > /home/runner/.config/clojure/deps.edn
           DRIVERS=databend clojure -X:dev:drivers:drivers-dev:test:user/databend
 
       - name: Build databend driver
